[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "is_base_64"
version = "0.0.1"
authors = [
  { name="juunini", email="juuni.ni.i@gmail.com" },
]
description = "Simple library for check the string is base64"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/juunini/is-base-64-py"
"Bug Tracker" ="https://github.com/juunini/is-base-64-py/issues"
